--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </div>
                     <div class="whoweare__body">
                         <div class="whoweare__video">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/XIueOdBMafo"
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/NOaNfWjJSS4"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
